@@ -1,35 +1,33 @@
 package org.myframework.ai.config;
 
+import com.agentsflex.llm.ollama.OllamaLlm;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
-import org.myframework.ai.IMcpServerEndpoint;
-import org.myframework.ai.config.properties.ChatProperties;
-import org.noear.solon.ai.chat.ChatModel;
-import org.noear.solon.ai.chat.tool.MethodToolProvider;
+import org.myframework.ai.chat.ChatClient;
+import org.myframework.ai.tool.MethodToolProvider;
+import org.myframework.ai.tool.ToolService;
 import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Configuration
 public class FrameworkChat {
 
     @Bean
-    ChatModel chatModel(ObjectProvider<IMcpServerEndpoint> serverEndpoints,
-                        ChatProperties chatProperties) {
-        val tools = serverEndpoints.stream()
+    ChatClient chatClient(ObjectProvider<ToolService> toolProviders,
+                          ObjectProvider<OllamaLlm> llmProvider) {
+        val tools = toolProviders.stream()
                 .map(MethodToolProvider::new)
                 .map(MethodToolProvider::getTools)
                 .flatMap(Collection::stream)
-                .collect(Collectors.toList());
-        return ChatModel.of(chatProperties.getApiUrl())
-                .apiKey(chatProperties.getApiKey())
-                .provider(chatProperties.getProvider())
-                .model(chatProperties.getModel())
-                .defaultToolsAdd(tools)
+                .toList();
+        val llm = llmProvider.getObject();
+        return ChatClient.builder()
+                .defaultTools(tools)
+                .llm(llm)
                 .build();
     }
 }
